2012-02-08  Adam Barth  <abarth@webkit.org>

        version_check.py should inform users that we don't support Python 2.5 anymore
        https://bugs.webkit.org/show_bug.cgi?id=78179

        Reviewed by Eric Seidel.

        We don't support Python 2.5 anymore.

        * Scripts/webkitpy/common/version_check.py:

2012-02-08  Adam Barth  <abarth@webkit.org>

        test_configuration.py shouldn't re-implement itertools
        https://bugs.webkit.org/show_bug.cgi?id=78178

        Reviewed by Eric Seidel.

        * Scripts/webkitpy/layout_tests/models/test_configuration.py:
        (TestConfigurationConverter.to_specifiers_list):
        (TestConfigurationConverter.to_specifiers_list.try_collapsing):
        (TestConfigurationConverter.to_specifiers_list.try_abbreviating):
        (TestConfigurationConverter):

2012-02-08  Adam Barth  <abarth@webkit.org>

        webkitpy should reply upon the multiprocessing package existing
        https://bugs.webkit.org/show_bug.cgi?id=78176

        Reviewed by Eric Seidel.

        Now that we don't support Python 2.5, this import can't fail.

        * Scripts/webkitpy/layout_tests/controllers/manager_worker_broker.py:
        (get):
        (_Process):
        (_Process.__init__):
        (_Process.run):
        * Scripts/webkitpy/layout_tests/controllers/manager_worker_broker_unittest.py:
        (FunctionTests.test_get__processes):
        (MultiProcessBrokerTests.setUp):
        * Scripts/webkitpy/layout_tests/port/base.py:
        (Port.__init__):
        (Port.default_worker_model):
        * Scripts/webkitpy/layout_tests/port/chromium_mac.py:
        (ChromiumMacPort.check_build):
        * Scripts/webkitpy/layout_tests/port/port_testcase.py:
        (PortTestCase.test_default_worker_model):
        * Scripts/webkitpy/layout_tests/run_webkit_tests_integrationtest.py:

2012-02-08  Gustavo Noronha Silva  <gns@gnome.org>

        Unreviewed typo fix that makes docs build again for the gtk2-based
        library.
